tests/negative/neg_pr362_mixed_named_positional.safe
package neg_pr362_mixed_named_positional

   subtype small_value is integer (0 to 10)

   function combine (left : small_value; right : small_value) returns integer
      return left + right

   function broken returns integer
      return combine (left = 1, 2)
